[gd_scene load_steps=2 format=3 uid="uid://c2q1xtrg1r0gv"]

[ext_resource type="Script" uid="uid://8gwg6iab3w2a" path="res://Scripts/Events/sivil_handling.gd" id="1_o74w6"]

[node name="sivilHandling" type="Node2D"]
script = ExtResource("1_o74w6")

[node name="AdvisorSprite" type="Sprite2D" parent="."]

[node name="DialoguePanel" type="Panel" parent="."]
offset_left = 523.0
offset_top = 794.0
offset_right = 1473.0
offset_bottom = 1133.0

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.5
offset_top = -127.5
offset_right = 408.5
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2

[node name="DecisionPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 525.0
offset_top = 570.0
offset_right = 1474.0
offset_bottom = 781.0
metadata/_edit_group_ = true

[node name="FerdigKnapp" type="Button" parent="DecisionPanel"]
visible = false
layout_mode = 2
offset_left = 3.0
offset_right = 276.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 45
text = "Ferdig"

[node name="VBoxContainer" type="VBoxContainer" parent="DecisionPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -33.0
offset_right = 82.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpyButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Vi må vite hva som rører seg på bakkeplanet. Spioner på befolkningen uten at de selv vet det!"

[node name="SurveyButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Det er viktig at folket føler seg hørt. Gjennomfør spørreundersøkelser for å finne ut hva de vil ha."

[node name="SurveilButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Nå er det ..."

[node name="DiplomacyButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "...."

[connection signal="pressed" from="DecisionPanel/FerdigKnapp" to="." method="_on_ferdig_knapp_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/SpyButton" to="." method="_on_spy_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/SurveyButton" to="." method="_on_survey_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/SurveilButton" to="." method="_on_surveil_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/DiplomacyButton" to="." method="_on_diplomacy_button_pressed"]
